# System-Monitor-Pro

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: ci.yml  release.yml
crates/diskspace-fix/: Cargo.toml
crates/diskspace-fix/src/: lib.rs  windows.rs
docs/: index.html
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/collectors/: cpu.rs  disk.rs  gpu.rs  linux_gpu_helpers.rs  macos_gpu_helpers.rs  memory.rs  mod.rs  network.rs  windows_gpu_helpers.rs
src-tauri/src/models/: mod.rs  system_data.rs
src-tauri/src/utils/: error.rs  formatting.rs  mod.rs
src/app/: store.js
src/components/: CpuTab.jsx  DiskTab.jsx  GpuTab.jsx  HistoricalChart.jsx  MemoryTab.jsx  NetworkTab.jsx  OverviewTab.jsx  ProcessesTab.jsx
src/features/error/: errorSlice.js
src/features/systemData/: systemDataSlice.js
src/features/ui/: uiSlice.js
src/utils/: formatting.js
